TAREA1 cambio en la pagina principal

--- a/Tarea1/Principal.html
+++ b/Tarea1/Principal.html
@@ -16,7 +16,7 @@
   </nav>
 </header>
 <section>
-  <h1 align="center">Cesar De la O &nbsp;</h1>
+  <h1 align="center">Cesar A. De la O &nbsp;</h1>
   <p align="center" >Historia de vida</p>
 </section>
 <footer>
