Cambio en la estructura de navegacion del sitio

--- a/Tarea1/CV.html
+++ b/Tarea1/CV.html
@@ -8,9 +8,9 @@
 <header>
   <nav>
 	  <ul>
-		<li><a href="Biografia.html">Biografia</a></li>
-	    <li><a href="Pasatiempos.html">Pasatiempos</a></li>
-		<li><a href="CV.html">Curriculum</a></li>
+		  <li><a href="CV.html">Curriculum</a></li>
+		<li><a href="Biografia.html">Educacion y Experiencia Laboral</a></li>
+	    <li><a href="Pasatiempos.html">Pasatiempos e Intereses</a></li>
 		<li><a href="#contacto">Contacto</a></li>
 	  </ul>
   </nav>
@@ -19,24 +19,26 @@
 	<h1 align="center">Curriculum Vitae</h1>
 	<ul>
 		<li>Datos personales</li><hr>
-		<li>Experiencia Laboral</li><hr>
-		<li>Educacion</li><hr>
-		<ul>
-			<li><b>Universidad</b></li>
-			<li><b>Bachillerato</b></li>
-			<li><bEducacion Basica</b></li>
-		</ul>
-		<li>Otros Conocimientos</li><hr>
+		<p>
+		<b>Carnet:</b> 00103518 <br>
+		<b>Año de estudio</b> Segundo Año <br>
+		<b>Carrera</b> Ingenieria Informatica <br>
+		<b>Github:</b> <a href="https://github.com/cessarD/Portafolio_PW0219_00103518.git">https://github.com/cessarD/Portafolio_PW0219_00103518.git</a>
+		</p>
+		<li> Conocimientos</li><hr>
 		<ul>
 			<li>Certificación MOS (Microsoft Office Specialist) Word 2013</li>
 			<li>Certificación MOS (Microsoft Office Specialist) Access 2013</li>
 		    <li>Lenguaje de Programación y Tecnología: JAVA, JAVASCRIPT,C#, C++, PHP, PYTHON, VISUAL BASIC, HTML, R <br>(El dominio de todos los lenguaje de programación mencionados es Intermedio)</li>
-			<li>Manejo Intermedio de paquete ADOBE: PHOTOSHOP,ILUSTRATOR, INDESIGN, FLASH, PREMIERE, AFTER EFECTS, AUDITION, LIGHTROOM, DREAMWEAVER</li>
+			<li>Manejo Intermedio de paqueteria ADOBE: PHOTOSHOP,ILUSTRATOR, INDESIGN, FLASH, PREMIERE, AFTER EFECTS, AUDITION, LIGHTROOM, DREAMWEAVER</li>
 		</ul>
-		<li>Referencias</li><hr>
-		<li>Experiencias</li><hr>
-		<p>Instructor de la materia, Matemática Noveno Grado. (2014, Prof. Fausto Gonzáles)</p>
-		<p>Miembro de Soporte Técnico Pedagógico (2014-2015, Prof. Ricardo Rodríguez)</p>
+		<li>Habilidades</li><hr>
+		<ul>
+			<li>Capacidad para resolver problemas</li>
+			<li>Trabajo en Equipo</li>
+			<li>Honestidad</li>
+			<li>Deseo de aprender</li>
+		</ul>
 		
 	</ul>
 	
