--- a/Tarea1/Pasatiempos.html
+++ b/Tarea1/Pasatiempos.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Educacion</title>
+<title>Pasatiempos</title>
 </head>
 <body>
 <header>
@@ -11,12 +11,23 @@
 		  <li><a href="CV.html">Curriculum</a></li>
 		<li><a href="Biografia.html">Educacion y Experiencia Laboral</a></li>
 	    <li><a href="Pasatiempos.html">Pasatiempos e intereses</a></li>
-		
 		<li><a href="#contacto">Contacto</a></li>
 	  </ul>
   </nav>
 </header>
 <main>
+	<h1 align="center">Pasatiempos</h1>
+	<ul>
+		<section>
+			<li><h2>Videojuegos</h2></li>
+			<p>Los videojuegos en los ultimos años no solo para mi, se ha convertido en algo muy util cuando se desea pasar el tiempo de manera rapida y divertida,en mi caso particular, estos han llegado a consumir quiza un 70% del tiempo libre que tengo entre el estudio y el trabajo.</p>
+			<p>
+			</p>
+		</section>
+		<section>
+			<li><h2>Deportes</h2></li>
+		</section>
+	</ul>
 </main>
 <footer>
 <h2 id="#contacto">Contacto</h2>
