--- a/Tarea1/Principal.html
+++ b/Tarea1/Principal.html
@@ -8,16 +8,17 @@
 <header>
   <nav>
 	  <ul>
-		<li><a href="Biografia.html">Biografia</a></li>
-	    <li><a href="Pasatiempos.html">Pasatiempos</a></li>
-		<li><a href="CV.html">Curriculum</a></li>
+		  <li><a href="CV.html">Curriculum</a></li>
+		<li><a href="Biografia.html">Educacion y Experiencia Laboral</a></li>
+	    <li><a href="Pasatiempos.html">Pasatiempos e Intereses</a></li>
+		
 		<li><a href="#contacto">Contacto</a></li>
 	  </ul>
   </nav>
 </header>
 <section>
-  <h1 align="center">Cesar A. De la O &nbsp;</h1>
-  <p align="center" >Historia de vida</p>
+  <h1 align="center">Cesar De la O &nbsp;</h1>
+  <p align="center" >f</p>
 </section>
 <footer>
 <h2 id="#contacto">Contacto</h2>
