Añadiendo imagenes y videos

--- a/Tarea1/Biografia.html
+++ b/Tarea1/Biografia.html
@@ -11,14 +11,51 @@
 		  <li><a href="CV.html">Curriculum</a></li>
 		<li><a href="Biografia.html">Educacion y Experiencia Laboral</a></li>
 	    <li><a href="Pasatiempos.html">Pasatiempos e intereses</a></li>
-		
 		<li><a href="#contacto">Contacto</a></li>
 	  </ul>
   </nav>
 </header>
 <main>
+	<section>
+	<h1 align="center">Educacion</h1><hr>
+	<ul>
+		
+			<li><b>Universidad</b></li>
+			<p>Ingeniería Informatica 2018- Actualmente en la Universidad Centroamericana “Jose Simeón Cañas” (UCA)</p>
+			<li><b>Bachillerato</b></li>
+		    <p>Bachillerato General 2014-2015 en el Colegio Liceo Salvadoreño</p>
+			<li><b>Educacion Basica</b></li>
+		    <p>Séptimo Grado-Noveno Grado 2011-2013 en el Colegio Liceo Salvadoreño</p>
+      <img src="Imagenes/uca.png" width="220" alt="UCA"/>
+	  <img src="Imagenes/liceo.png" width="205" alt="Liceo Salvadoreño"/>
+</section>
+		<section>
+			<h1 align="center">Experiencia Laboral</h1><hr>
+			<b>Puesto:</b>Teleoperador<br>
+			<b>Empresa:</b>Pizza Hut<br>
+			<b>Periodo:</b>Septiembre 2016-Mayo 2018<br>
+			<b>Experiencias adquiridas:</b><p>Brindar un buen servicio al cliente al momento de recibir sus llamadas.<br>
+			Acostumbrado al logro de metas establecidas por la empresa.<br>
+			Lograr la satisfacción del cliente al brindarle diferentes opciones para satisfacer sus necesidades.
+			</p><br><br>
+			
+			<b>Puesto:</b>Analista de control de calidad El Salvador-Guatemala<br>
+			<b>Empresa:</b>Pizza Hut<br>
+			<b>Periodo:</b>Noviembre 2017-Diciembre 2017<br>
+			<b>Experiencias adquiridas:</b><p>Verificar a los proveedores en el cumplimiento de los lineamientos de la certificación FSC 22000.<br>
+			Garantizar bajo nivel de riesgo sanitario en las diversas materias primas utilizadas en Pizza Hut y KFC.<br>
+			Validación de la inocuidad brindada por parte de los diversos proveedores.
+			</p><br><br>
+			
+			<b>Puesto:</b>Analista de Mantenimiento Centroamerica<br>
+			<b>Empresa:</b>Pizza Hut<br>
+			<b>Periodo:</b>Mayo 2018-Actualmente<br>
+			<b>Experiencias adquiridas:</b><p>Validar el nivel de satisfaccion por parte de las tiendas con respecto al personal de mantenimiento de la empresa.<br>Desarrollar aplicaciones web y de escritorio para el apoyo en la toma de decisiones a nivel gerencial.<br>Administrar bases de datos con un alto nivel de desarrollo y varias fuentes de informacion.</p><br>
+			</section>
+	</ul>
 </main>
 <footer>
+	<hr>
 <h2 id="#contacto">Contacto</h2>
 <p>Cesar De la O</p>
 <label>Telefono: <a href="Tel:72650000">72650000</a>
