--- a/Tarea1/Principal.html
+++ b/Tarea1/Principal.html
@@ -16,11 +16,17 @@
 	  </ul>
   </nav>
 </header>
+	<hr>
 <section>
+		<audio src="Imagenes/Avicii ft Aloe Blacc   Wake Me Up (Radio Edit).mp3" controls autoplay preload="auto" ></audio>
   <h1 align="center">Cesar De la O &nbsp;</h1>
-  <p align="center" >f</p>
+	<center>
+  <img src="Imagenes/ce.jpg" width="120" alt=""/>
+	</center>
+<p align="justify" >Hola,mi nombre es Cesar Augusto De la O,tengo 21 años,actualmente me encuentro estudiando en la UCA y trabajo a medio tiempo,busco aprender cosas nuevas dia con dia ya sea a traves de libros o cursos en linea ya que el mundo en el que vivimos se encuentra en constante cambio y actulizacion para poder sobresalir nunca podemos quedarnos atras. Me gusta pasar mi tiempo ya sea jugando videojuegos o escuchando musica ya que son formas eficientes de diversion y de bajar niveles de estres.Mi mentalidad se basa en la letra de una cancion que traducida al español dice: "Vive una vida que recordaras". Solo tenemos una vida y tenemos que aprovecharla haciendo cosas que nos gustan y compartiendo con las personas que queremos.</p>
 </section>
 <footer>
+	<hr>
 <h2 id="#contacto">Contacto</h2>
 <p>Cesar De la O</p>
 <label>Telefono: <a href="Tel:72650000">72650000</a>
