Añadiendo enlaces externos

--- a/Tarea1/Pasatiempos.html
+++ b/Tarea1/Pasatiempos.html
@@ -23,8 +23,9 @@
 			<li><h2>Videojuegos</h2></li>
 			<p>Los videojuegos en los ultimos años no solo para mi, se ha convertido en algo muy util cuando se desea pasar el tiempo de manera rapida y divertida,en mi caso particular, estos han llegado a consumir quiza un 70% del tiempo libre que tengo entre el estudio y el trabajo.</p>
 			<p>
-			Yo he participado en diversas eliminatorias de juegos tales como Fifa,Just Dance y actualmente me encuentro en un torneo de un juego denominado Age of Empires 2, estos torneos y eliminatorias en ocasiones llegan a ser tan importantes que uno puede hasta conseguir dinero solo por participar en ellos. 
+			Yo he participado en diversas eliminatorias de juegos tales como <a href="https://es.fifa.com/fifaeworldcup/">Fifa</a>,<a href="https://justdance.fandom.com/wiki/Just_Dance_World_Cup">Just Dance</a> y actualmente me encuentro en un torneo de un juego denominado <a href="https://www.reddit.com/r/aoe2/comments/9le5up/age_of_empires_2_world_cup_2v2_edition/">Age of Empires 2</a>, estos torneos y eliminatorias en ocasiones llegan a ser tan importantes que uno puede hasta conseguir dinero solo por participar en ellos. 
 			</p>
+		
 		    <img src="Imagenes/AoE.jpg" width="130" alt="Age of Empires 2"/>
       <img src="Imagenes/fifa.png" width="120"alt="Fifa World Cup Esports"/>
 	  <img src="Imagenes/JD.jfif" width="200"alt="Just Dance World Cup"/>
@@ -41,7 +42,7 @@
 				<p align="justify">Mi gusto musical es muy variado, jamas me quejaria de ningun genero de musica que este sonando en algun lugar,sin embargo, tengo cierta aficion a la musica electronica. Hay muchas personas que no entiende como a mi y a miles de personas mas nos puede gustar este tipo de musica, lo que ellos no saben es que hay cientos de generos diferentes entre los cuales se encuentra:HardStyle,Hardcore,Techno,Trance,Electro pop, EDM,etc. Ademas generos como el Electro pop y EDM presentan canciones con mucha letra y en muchas ocasiones esta letras llegan a ser hasta de ambitos motivacionales </p>
 				<p align="justify">Recuerdo desde muy pequeño escuchar este tipo de musica pero sin lugar a duda mi verdadero amor empezo entre el 2012 y 2013 con canciones como No Beef de Steve Aoki o Wake me up de Avicii los cuales fueron quizas los DJ´s que me introducieron de lleno a estas maravillosas melodias</p>
 			  <img src="Imagenes/edm.jfif" width="369" height="136" alt=""/>
-		      <video controls autoplay src="Imagenes/Afrojack and Steve Aoki   No Beef (Radio Edit) (ft Miss Palmer )[1].mp4" ></video>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ilw-qmqZ5zY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </ul>
 			
         </section>
